# LCR_Fix

./: .gitignore  AGENTS.md  README.md  config_manager.py  etl_utils.py  ingest.py  pyproject.toml  requirements.txt  schema_manager.py  sync.py  table_processor.py
.github/workflows/: ci.yml  security.yml
tests/: test_etl.py  test_truncate.py
